--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-sample
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Sample</title>
+    		<meta http-equiv="content-type" content="text/html;charset=UTF-8">
+		<meta name="author" content="JinH" />
+	</head>
+	<body>
+		<p>Sample</p>
+	</body>
+
+</html>
