--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 		<title>Sample</title>
     		<meta http-equiv="content-type" content="text/html;charset=UTF-8">
 		<meta name="author" content="JinH" />
+		<link href="default.css" rel="stylesheet" type="text/css" media="screen" />
 	</head>
 	<body>
-		<p>Sample</p>
+		<p id="title">Sample</p>
 	</body>
 
 </html>
