--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Sample</title>
     		<meta http-equiv="content-type" content="text/html;charset=UTF-8">
 		<meta name="author" content="JinH" />
-		<link href="default.css" rel="stylesheet" type="text/css" media="screen" />
+		<link href="css/style.css" rel="stylesheet" type="text/css" media="screen" />
 	</head>
 	<body>
 		<p id="title">Sample</p>
