--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
 		<link href="css/style.css" rel="stylesheet" type="text/css" media="screen" />
 	</head>
 	<body>
-		<p id="title">Sample</p>
+		<div id="title">Sample</div>
+        <div style="text-align: center;">
+        	<div style="display:inline-block" onClick="location.replace('http://admin0.github.com/morse');">
+            	<img src="http://admin0.github.com/morse/image/icon.png">
+                <p>모스 부호</p>
+            </div>
+        </div>
 	</body>
 
 </html>
