--- a/index.html
+++ b/index.html
@@ -4,27 +4,46 @@
 		<title>Sample</title>
     		<meta http-equiv="content-type" content="text/html;charset=UTF-8">
 		<meta name="author" content="JinH" />
-		<link href="css/style.css" rel="stylesheet" type="text/css" media="screen" />
+		<link href="style.css" rel="stylesheet" type="text/css" media="screen" />
 	</head>
 	<body>
-		<div id="title">Sample</div>
-        <div style="text-align: center;">
-        	<div style="display:inline-block" onClick="location.replace('http://admin0.github.com/morse');">
-            	<img src="http://admin0.github.com/morse/image/icon.png">
-                <p>모스 부호</p>
-            </div>
-        </div>
+
+		<div class="title">&lt;SAMPLE&gt;</div>
+		<section>
+
+			<div class="item" style="text-align: center;">
+				<a  href="http://admin0.github.com/morse">
+					<img src="http://admin0.github.com/morse/image/icon.png"/>
+					<p>MORSE CODE</p>
+				</a>
+			</div>
+			<div class="item" style="text-align: center;">
+				<a  href="http://admin0.github.com/SAT_kr">
+					<img src="images/trans.png"/>
+					<p>SAT KOREA</p>
+				</a>
+			</div>
+			<div class="item" style="text-align: center;">
+				<a  href="http://admin0.github.com/bucket">
+					<img src="images/trans.png"/>
+					<p>BUCKET LIST</p>
+				</a>
+			</div>
+		</section>
+				<div class="title">&lt;/SAMPLE&gt;</div>
 	</body>
-	
+
+
+
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-	
+
 	  ga('create', 'UA-39552694-1', 'auto');
 	  ga('send', 'pageview');
-	
+
 	</script>
-	
+
 </html>
