--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			</div>
 			<div class="item" style="text-align: center;">
 				<a  href="http://admin0.github.com/bucket">
-					<img src="images/trans.png"/>
+					<img src="http://admin0.github.com/bucket/img/[favicon]/favicon0.ico"/>
 					<p>BUCKET LIST</p>
 				</a>
 			</div>
