--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			</div>
 			<div class="item" style="text-align: center;">
 				<a  href="http://admin0.github.com/SAT_kr">
-					<img src="images/trans.png"/>
+					<img src="http://admin0.github.com/SAT_kr/icon.png"/>
 					<p>SAT KOREA</p>
 				</a>
 			</div>
