--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			</a>
 		</div>
 		<div class="item" style="text-align: center;">
-			<a href="http://admin0.github.com/apps/Morse">
+			<a href="https://play.google.com/store/apps/details?id=com.morsecode.translator.jinh&hl=ko">
 				<img src="http://admin0.github.com/apps/Morse/img/icon_512.png" />
 				<p>MORSE (Android)</p>
 			</a>
