--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
 	<section>
 		<div class="item" style="text-align: center;">
 			<a href="http://admin0.github.com/apps/8-BIT">
-				<img src="http://admin0.github.com/apps/8-BIT/img/icon_coloredpixel.png" />
+				<img src="http://admin0.github.com/apps/8-BIT/img/icons/8B_m.png" />
 				<p>8-BIT</p>
 			</a>
 		</div>
 		<div class="item" style="text-align: center;">
-			<a href="http://admin0.github.com/apps/Morse">
+			<a href="https://play.google.com/store/apps/details?id=com.morsecode.translator.jinh&hl=ko">
 				<img src="http://admin0.github.com/apps/Morse/img/icon_512.png" />
 				<p>MORSE (Android)</p>
 			</a>
