--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 
 <body>
 
-	<div class="title">&lt;SAMPLE&gt;</div>
+	<header class="title">&lt;SAMPLE&gt;</header>
+
 	<section>
+		<h2>web projects</h2>
 		<div class="item" style="text-align: center;">
 			<a href="/morse">
 				<img src="/morse/image/icon.png" />
@@ -34,6 +36,7 @@
 	</section>
 	<hr>
 	<section>
+		<h2>android projects</h2>
 		<div class="item" style="text-align: center;">
 			<a href="/apps/8-BIT">
 				<img src="/apps/8-BIT/img/icons/8B_m.png" />
@@ -49,14 +52,17 @@
 	</section>
 	<hr>
 	<section>
+		<h2>works</h2>
 		<div class="item" style="text-align: center;">
 			<a href="http://jw.jinh.kr">
 				<img src="http://jw.jinh.kr/sop/account/jw_cartel_chrome.png" style="border-radius:.5em; width:85%;" />
-				<p>JW CARTEL</p>
+				<p>JW TEAM CARTEL</p>
 			</a>
 		</div>
 	</section>
-	<div class="title">&lt;/SAMPLE&gt;</div>
+
+	<footer class="title">&lt;/SAMPLE&gt;</footer>
+	
 </body>
 
 
