--- a/index.html
+++ b/index.html
@@ -18,19 +18,37 @@
 		<div class="item" style="text-align: center;">
 			<a href="/morse">
 				<img src="/morse/image/icon.png" />
-				<p>MORSE (web)</p>
+				<p>MORSE <span>(web)</span></p>
 			</a>
 		</div>
 		<div class="item" style="text-align: center;">
 			<a href="/SAT_kr">
 				<img src="/SAT_kr/icon.png" />
-				<p>SAT COUNTER (kr)</p>
+				<p>SAT COUNTER <span>(kr)</span></p>
 			</a>
 		</div>
 		<div class="item" style="text-align: center;">
 			<a href="/bucket">
 				<img src="/bucket/img/[favicon]/favicon0.ico" />
 				<p>BUCKET LIST</p>
+			</a>
+		</div>
+		<div class="item" style="text-align: center;">
+			<a href="http://blog.jinh.kr/418">
+				<img src="" />
+				<p>Lotto No. Maker</p>
+			</a>
+		</div>
+		<div class="item" style="text-align: center;">
+			<a href="http://blog.jinh.kr/297">
+				<img src="" />
+				<p>Battle Simulator</p>
+			</a>
+		</div>
+		<div class="item" style="text-align: center;">
+			<a href="http://blog.jinh.kr/835">
+				<img src="http://cfile7.uf.tistory.com/image/21255E50576690F92A1606" style="border-radius:.5em; width:128px; "/>
+				<p>CURSE OF THE MUMMUMMY</p>
 			</a>
 		</div>
 	</section>
@@ -46,7 +64,7 @@
 		<div class="item" style="text-align: center;">
 			<a href="https://play.google.com/store/apps/details?id=com.morsecode.translator.jinh&hl=ko">
 				<img src="/apps/Morse/img/icon_512.png" />
-				<p>MORSE (Android)</p>
+				<p>MORSE <span>(Android)</span></p>
 			</a>
 		</div>
 	</section>
@@ -62,7 +80,7 @@
 	</section>
 
 	<footer class="title">&lt;/SAMPLE&gt;</footer>
-	
+
 </body>
 
 
