--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
 		</div>
 		<div class="item" style="text-align: center;">
 			<a href="http://blog.jinh.kr/418">
-				<img src="" />
+				<img src="images/icon__lotto.png" />
 				<p>Lotto No. Maker</p>
 			</a>
 		</div>
 		<div class="item" style="text-align: center;">
 			<a href="http://blog.jinh.kr/297">
-				<img src="" />
+				<img src="images/icoin__battle_simulator.png" />
 				<p>Battle Simulator</p>
 			</a>
 		</div>
 		<div class="item" style="text-align: center;">
 			<a href="http://blog.jinh.kr/835">
-				<img src="http://cfile7.uf.tistory.com/image/21255E50576690F92A1606" style="border-radius:.5em; width:128px; "/>
+				<img src="images/icon__mummummy.png" style="width:128px; height:128px;"/>
 				<p>CURSE OF THE MUMMUMMY</p>
 			</a>
 		</div>
