--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<title>Sample</title>
 	<meta http-equiv="content-type" content="text/html;charset=UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<meta name="author" content="JinH" />
 	<link href="style.css" rel="stylesheet" type="text/css" media="screen" />
 	<script src="main.js"></script>
@@ -17,19 +18,19 @@
 		<h2>web projects</h2>
 		<div class="item" style="text-align: center;">
 			<a href="/morse">
-				<img src="/morse/image/icon.png" />
+				<img src="http://jinh.kr/morse/image/icon.png" />
 				<p>MORSE <span>(web)</span></p>
 			</a>
 		</div>
 		<div class="item" style="text-align: center;">
 			<a href="/SAT_kr">
-				<img src="/SAT_kr/icon.png" />
+				<img src="http://jinh.kr/SAT_kr/icon.png" />
 				<p>SAT COUNTER <span>(kr)</span></p>
 			</a>
 		</div>
 		<div class="item" style="text-align: center;">
 			<a href="/bucket">
-				<img src="/bucket/img/[favicon]/favicon0.ico" />
+				<img src="http://jinh.kr/bucket/img/[favicon]/favicon0.ico" />
 				<p>BUCKET LIST</p>
 			</a>
 		</div>
@@ -57,7 +58,7 @@
 		<h2>android projects</h2>
 		<div class="item" style="text-align: center;">
 			<a href="/apps/8-BIT">
-				<img src="/apps/8-BIT/img/icons/8B_m.png" />
+				<img src="http://jinh.kr/apps/8-BIT/img/icons/8B_m.png" />
 				<p>8-BIT</p>
 			</a>
 		</div>
