--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<title>Sample</title>
 	<meta http-equiv="content-type" content="text/html;charset=UTF-8">
+  <meta name="theme-color" content="#212121" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<meta name="author" content="JinH" />
 	<link href="style.css" rel="stylesheet" type="text/css" media="screen" />
@@ -12,7 +13,7 @@
 
 <body>
 
-	<header class="title">&lt;SAMPLE&gt;</header>
+	<!-- <header class="title">&lt;SAMPLE&gt;</header> -->
 
 	<section>
 		<h2>web projects</h2>
@@ -48,7 +49,7 @@
 		</div>
 		<div class="item" style="text-align: center;">
 			<a href="http://blog.jinh.kr/835">
-				<img src="images/icon__mummummy.png" style="width:128px; height:128px;"/>
+				<img src="images/icon__mummummy.png"/>
 				<p>CURSE OF THE MUMMUMMY</p>
 			</a>
 		</div>
@@ -80,7 +81,7 @@
 		</div>
 	</section>
 
-	<footer class="title">&lt;/SAMPLE&gt;</footer>
+	<!-- <footer class="title">&lt;/SAMPLE&gt;</footer> -->
 
 </body>
 
