--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-	<!-- <header class="title">&lt;SAMPLE&gt;</header> -->
+	<header class="title">&lt;SAMPLE&gt;</header>
 
 	<section>
 		<h2>web projects</h2>
@@ -81,7 +81,7 @@
 		</div>
 	</section>
 
-	<!-- <footer class="title">&lt;/SAMPLE&gt;</footer> -->
+	<footer class="title">&lt;/SAMPLE&gt;</footer>
 
 </body>
 
