--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		<h2>works</h2>
 		<div class="item" style="text-align: center;">
 			<a href="https://jw.jinh.kr">
-				<img src="https://jw.jinh.kr/sop/account/jw_cartel_chrome.png" style="border-radius:.5em; width:85%;" />
+				<img src="images/icon__jw_cartel.png" style="border-radius:.5em; width:85%;" />
 				<p>JW TEAM CARTEL</p>
 			</a>
 		</div>
