--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 		</div>
 		<div class="item" style="text-align: center;">
 			<a href="https://play.google.com/store/apps/details?id=com.morsecode.translator.jinh&hl=ko">
-				<img src="https://admin0.github.io/apps/Morse/img/icon_512.png" />
+				<img src="https://jinh.kr/apps/Morse/img/icon_512.png" />
 				<p>MORSE <span>(Android)</span></p>
 			</a>
 		</div>
