--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-39552694-1"></script>
 	<script>
-	  window.dataLayer = window.dataLayer || [];
+		window.dataLayer = window.dataLayer || [];
 	  function gtag(){dataLayer.push(arguments);}
 	  gtag('js', new Date());
 
@@ -14,9 +14,13 @@
 
 	<title>Sample</title>
 	<meta http-equiv="content-type" content="text/html;charset=UTF-8">
-  <meta name="theme-color" content="#212121" />
+	<meta name="theme-color" content="#212121" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<meta name="author" content="JinH" />
+  <link rel="shortcut icon" href="image/favicon.ico">
+	<meta name="msapplication-TileImage" content="image/icon.png">
+	<link rel="apple-touch-icon" href="image/icon.png">
+	<link rel="icon" type="image/png" href="image/icon.png">
 	<link href="style.css" rel="stylesheet" type="text/css" media="screen" />
 	<script src="main.js"></script>
 </head>
@@ -59,7 +63,7 @@
 		</div>
 		<div class="item" style="text-align: center;">
 			<a href="https://blog.jinh.kr/835">
-				<img src="images/icon__mummummy.png"/>
+				<img src="images/icon__mummummy.png" />
 				<p>CURSE OF THE MUMMUMMY</p>
 			</a>
 		</div>
