--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 	<meta name="theme-color" content="#212121" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<meta name="author" content="JinH" />
-  <link rel="shortcut icon" href="image/favicon.ico">
-	<meta name="msapplication-TileImage" content="image/icon.png">
-	<link rel="apple-touch-icon" href="image/icon.png">
-	<link rel="icon" type="image/png" href="image/icon.png">
+  <link rel="shortcut icon" href="images/favicon.ico">
+	<meta name="msapplication-TileImage" content="images/icon.png">
+	<link rel="apple-touch-icon" href="images/icon.png">
+	<link rel="icon" type="image/png" href="images/icon.png">
 	<link href="style.css" rel="stylesheet" type="text/css" media="screen" />
 	<script src="main.js"></script>
 </head>
