--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 	<section>
 		<h2>works</h2>
 		<div class="item" style="text-align: center;">
-			<a href="https://jw.jinh.kr">
+			<a href="http://jw.jinh.kr">
 				<img src="images/icon__jw_cartel.png" style="border-radius:.5em; width:85%;" />
 				<p>JW TEAM CARTEL</p>
 			</a>
