--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		</div>
 		<div class="item" style="text-align: center;">
 			<a href="/bucket">
-				<img src="https://jinh.kr/bucket/img/[favicon]/favicon0.ico" />
+				<img src="images/icon__bucket.png" />
 				<p>BUCKET LIST</p>
 			</a>
 		</div>
