update qualify icon

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		</div>
 		<div class="item" style="text-align: center;">
 			<a href="/qualify">
-				<img src="https://jinh.kr/bucket/img/[favicon]/favicon1.ico" />
+				<img src="images/icon__qualify.png" />
 				<p>Qualify</p>
 			</a>
 		</div>
