--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	  gtag('config', 'UA-39552694-1');
 	</script>
 
-	<title>Sample</title>
+	<title>jinh.kr</title>
 	<meta http-equiv="content-type" content="text/html;charset=UTF-8">
 	<meta name="theme-color" content="#212121" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -27,7 +27,7 @@
 
 <body>
 
-	<header class="title">&lt;SAMPLE&gt;</header>
+	<header class="title">&lt;jinh.kr&gt;</header>
 
 	<section>
 		<h2>web projects</h2>
@@ -101,7 +101,7 @@
 		</div>
 	</section>
 
-	<footer class="title">&lt;/SAMPLE&gt;</footer>
+	<footer class="title">&lt;/jinh.kr&gt;</footer>
 
 </body>
 
