--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	</script>
 
 	<title>jinh.kr</title>
+  <meta name="description" content="이 도메인은 이제 제껍니다 ㅎ" />
 	<meta http-equiv="content-type" content="text/html;charset=UTF-8">
 	<meta name="theme-color" content="#212121" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
