--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			</a>
 		</div>
 		<div class="item" style="text-align: center;">
-			<a href="https://blog.jinh.kr/418">
+			<a href="http://jinh.kr/lotto">
 				<img src="images/icon__lotto.png" />
 				<p>Lotto No. Maker</p>
 			</a>
