--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
 			</a>
 		</div>
 		<div class="item" style="text-align: center;">
+			<a href="/morse">
+				<img src="https://jinh.kr/morse/image/icon_b.png" />
+				<p>BRAILLE <span></span></p>
+			</a>
+		</div>
+		<div class="item" style="text-align: center;">
 			<a href="/SAT_kr">
 				<img src="https://jinh.kr/SAT_kr/icon.png" />
 				<p>SAT COUNTER <span>(kr)</span></p>
@@ -72,6 +78,12 @@
 			<a href="https://blog.jinh.kr/835">
 				<img src="images/icon__mummummy.png" />
 				<p>CURSE OF THE MUMMUMMY</p>
+			</a>
+		</div>
+		<div class="item" style="text-align: center;">
+			<a href="/meme-cal">
+				<img src="images/trans.png" />
+				<p>MEME CALCULATOR</p>
 			</a>
 		</div>
 	</section>
