--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			</a>
 		</div>
 		<div class="item" style="text-align: center;">
-			<a href="/morse">
+			<a href="/braille">
 				<img src="https://jinh.kr/morse/image/icon_b.png" />
 				<p>BRAILLE <span></span></p>
 			</a>
