--- a/braille/index.html
+++ b/braille/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <script type="text/javascript">
-    window.location.href = '/morse/#b';
+    location.replace('/morse/#b');
   </script>
 </head>
 
