webp로 아이콘들 수정.

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<meta name="author" content="JinH" />
   <link rel="shortcut icon" href="images/favicon.ico">
-	<meta name="msapplication-TileImage" content="images/icon.png">
-	<link rel="apple-touch-icon" href="images/icon.png">
-	<link rel="icon" type="image/png" href="images/icon.png">
+	<meta name="msapplication-TileImage" content="images/icon.webp">
+	<link rel="apple-touch-icon" href="images/icon.webp">
+	<link rel="icon" type="image/webp" href="images/icon.webp">
 	<link href="style.css" rel="stylesheet" type="text/css" media="screen" />
 	<script src="main.js"></script>
 </head>
@@ -34,13 +34,13 @@
 		<h2>web projects</h2>
 		<div class="item" style="text-align: center;">
 			<a href="/morse">
-				<img src="https://jinh.kr/morse/image/icon.png" />
+				<img src="https://jinh.kr/morse/image/icon.webp" />
 				<p>MORSE <span>(web)</span></p>
 			</a>
 		</div>
 		<div class="item" style="text-align: center;">
 			<a href="/braille">
-				<img src="https://jinh.kr/morse/image/icon_b.png" />
+				<img src="https://jinh.kr/morse/image/icon_b.webp" />
 				<p>BRAILLE <span></span></p>
 			</a>
 		</div>
@@ -52,31 +52,31 @@
 		</div>
 		<div class="item" style="text-align: center;">
 			<a href="/bucket">
-				<img src="images/icon__bucket.png" />
+				<img src="images/icon__bucket.webp" />
 				<p>BUCKET LIST</p>
 			</a>
 		</div>
 		<div class="item" style="text-align: center;">
 			<a href="/qualify">
-				<img src="images/icon__qualify.png" />
+				<img src="images/icon__qualify.webp" />
 				<p>Qualify</p>
 			</a>
 		</div>
 		<div class="item" style="text-align: center;">
 			<a href="http://jinh.kr/lotto">
-				<img src="images/icon__lotto.png" />
+				<img src="images/icon__lotto.webp" />
 				<p>Lotto No. Maker</p>
 			</a>
 		</div>
 		<div class="item" style="text-align: center;">
 			<a href="https://blog.jinh.kr/297">
-				<img src="images/icoin__battle_simulator.png" />
+				<img src="images/icoin__battle_simulator.webp" />
 				<p>Battle Simulator</p>
 			</a>
 		</div>
 		<div class="item" style="text-align: center;">
 			<a href="https://blog.jinh.kr/835">
-				<img src="images/icon__mummummy.png" />
+				<img src="images/icon__mummummy.webp" />
 				<p>CURSE OF THE MUMMUMMY</p>
 			</a>
 		</div>
@@ -108,7 +108,7 @@
 		<h2>works</h2>
 		<div class="item" style="text-align: center;">
 			<a href="http://jw.jinh.kr">
-				<img src="images/icon__jw_cartel.png" style="border-radius:.5em; width:85%;" />
+				<img src="images/icon__jw_cartel.webp" style="border-radius:.5em; width:85%;" />
 				<p>JW TEAM CARTEL</p>
 			</a>
 		</div>
