--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 	</script>
 
 	<title>jinh.kr</title>
-  <meta name="description" content="이 도메인은 이제 제껍니다 ㅎ" />
+	<meta name="description" content="이 도메인은 이제 제껍니다 ㅎ" />
 	<meta http-equiv="content-type" content="text/html;charset=UTF-8">
 	<meta name="theme-color" content="#212121" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<meta name="author" content="JinH" />
-  <link rel="shortcut icon" href="images/favicon.ico">
+	<link rel="shortcut icon" href="images/favicon.ico">
 	<meta name="msapplication-TileImage" content="images/icon.webp">
 	<link rel="apple-touch-icon" href="images/icon.webp">
 	<link rel="icon" type="image/webp" href="images/icon.webp">
@@ -30,57 +30,57 @@
 
 	<header class="title">&lt;jinh.kr&gt;</header>
 
+	<h2>web projects</h2>
 	<section>
-		<h2>web projects</h2>
-		<div class="item" style="text-align: center;">
+		<div class="item">
 			<a href="/morse">
 				<img src="https://jinh.kr/morse/image/icon.webp" />
 				<p>MORSE <span>(web)</span></p>
 			</a>
 		</div>
-		<div class="item" style="text-align: center;">
+		<div class="item">
 			<a href="/braille">
 				<img src="https://jinh.kr/morse/image/icon_b.webp" />
 				<p>BRAILLE <span></span></p>
 			</a>
 		</div>
-		<div class="item" style="text-align: center;">
+		<div class="item">
 			<a href="/SAT_kr">
 				<img src="https://jinh.kr/SAT_kr/icon.png" />
 				<p>SAT COUNTER <span>(kr)</span></p>
 			</a>
 		</div>
-		<div class="item" style="text-align: center;">
+		<div class="item">
 			<a href="/bucket">
 				<img src="images/icon__bucket.webp" />
 				<p>BUCKET LIST</p>
 			</a>
 		</div>
-		<div class="item" style="text-align: center;">
+		<div class="item">
 			<a href="/qualify">
 				<img src="images/icon__qualify.webp" />
 				<p>Qualify</p>
 			</a>
 		</div>
-		<div class="item" style="text-align: center;">
+		<div class="item">
 			<a href="http://jinh.kr/lotto">
 				<img src="images/icon__lotto.webp" />
 				<p>Lotto No. Maker</p>
 			</a>
 		</div>
-		<div class="item" style="text-align: center;">
+		<div class="item">
 			<a href="https://blog.jinh.kr/297">
 				<img src="images/icoin__battle_simulator.webp" />
 				<p>Battle Simulator</p>
 			</a>
 		</div>
-		<div class="item" style="text-align: center;">
+		<div class="item">
 			<a href="https://blog.jinh.kr/835">
 				<img src="images/icon__mummummy.webp" />
 				<p>CURSE OF THE MUMMUMMY</p>
 			</a>
 		</div>
-		<div class="item" style="text-align: center;">
+		<div class="item">
 			<a href="/meme-cal">
 				<img src="images/trans.png" />
 				<p>MEME CALCULATOR</p>
@@ -88,15 +88,15 @@
 		</div>
 	</section>
 	<hr>
+	<h2>android projects</h2>
 	<section>
-		<h2>android projects</h2>
-		<div class="item" style="text-align: center;">
+		<div class="item">
 			<a href="/apps/8-BIT">
 				<img src="https://jinh.kr/apps/8-BIT/img/icons/8B_m.png" />
 				<p>8-BIT</p>
 			</a>
 		</div>
-		<div class="item" style="text-align: center;">
+		<div class="item">
 			<a href="https://play.google.com/store/apps/details?id=com.morsecode.translator.jinh&hl=ko">
 				<img src="https://jinh.kr/apps/Morse/img/icon_512.png" />
 				<p>MORSE <span>(Android)</span></p>
@@ -104,11 +104,11 @@
 		</div>
 	</section>
 	<hr>
+	<h2>works</h2>
 	<section>
-		<h2>works</h2>
-		<div class="item" style="text-align: center;">
+		<div class="item">
 			<a href="http://jw.jinh.kr">
-				<img src="images/icon__jw_cartel.webp" style="border-radius:.5em; width:85%;" />
+				<img src="images/icon__jw_cartel.webp" style="border-radius:.5em; width:85%; height: 85%;" />
 				<p>JW TEAM CARTEL</p>
 			</a>
 		</div>
