--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 	<section>
 		<div class="item">
 			<a href="http://jw.jinh.kr">
-				<img src="images/icon__jw_cartel.webp" style="border-radius:.5em; width:calc(128px - 24px); height: calc(128px - 24px);" />
+				<img class="margin0" src="images/icon__jw_cartel.webp" style="" />
 				<p>JW TEAM CARTEL</p>
 			</a>
 		</div>
