--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 	<link rel="apple-touch-icon" href="images/icon.webp">
 	<link rel="icon" type="image/webp" href="images/icon.webp">
 	<link href="style.css" rel="stylesheet" type="text/css" media="screen" />
-	<script src="main.js"></script>
+	<script defer src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+	<script defer src="main.js"></script>
 </head>
 
 <body>
@@ -32,84 +33,96 @@
 
 	<h2>web projects</h2>
 	<section>
-		<div class="item">
+		<div class="item morse">
 			<a href="/morse">
 				<img src="https://jinh.kr/morse/image/icon.webp" />
 				<p>MORSE <span>(web)</span></p>
+				<span class="since">2013</span>
 			</a>
 		</div>
-		<div class="item">
+		<div class="item braille">
 			<a href="/braille">
 				<img src="https://jinh.kr/morse/image/icon_b.webp" />
 				<p>BRAILLE <span></span></p>
+				<span class="since">2020</span>
 			</a>
 		</div>
-		<div class="item">
+		<div class="item SAT_kr">
 			<a href="/SAT_kr">
 				<img src="https://jinh.kr/SAT_kr/icon.png" />
 				<p>SAT COUNTER <span>(kr)</span></p>
+				<span class="since">2010</span>
 			</a>
 		</div>
-		<div class="item">
+		<div class="item bucket">
 			<a href="/bucket">
 				<img src="images/icon__bucket.webp" />
 				<p>BUCKET LIST</p>
+				<span class="since">2014</span>
 			</a>
 		</div>
-		<div class="item">
+		<div class="item qualify">
 			<a href="/qualify">
 				<img src="images/icon__qualify.webp" />
 				<p>Qualify</p>
+				<span class="since">2018</span>
 			</a>
 		</div>
-		<div class="item">
+		<div class="item lotto">
 			<a href="http://jinh.kr/lotto">
 				<img src="images/icon__lotto.webp" />
 				<p>Lotto No. Maker</p>
+				<span class="since"></span>
 			</a>
 		</div>
-		<div class="item">
+		<div class="item battle">
 			<a href="https://blog.jinh.kr/297">
 				<img src="images/icoin__battle_simulator.webp" />
 				<p>Battle Simulator</p>
+				<span class="since">2009</span>
 			</a>
 		</div>
-		<div class="item">
+		<div class="item mmm">
 			<a href="https://blog.jinh.kr/835">
 				<img src="images/icon__mummummy.webp" />
 				<p>CURSE OF THE MUMMUMMY</p>
+				<span class="since"></span>
 			</a>
 		</div>
-		<div class="item">
+		<!-- <div class="item meme-cal">
 			<a href="/meme-cal">
 				<img src="images/trans.png" />
 				<p>MEME CALCULATOR</p>
+				<span class="since"></span>
 			</a>
-		</div>
+		</div> -->
 	</section>
 	<hr>
 	<h2>android projects</h2>
 	<section>
-		<div class="item">
+		<div class="item BIT">
 			<a href="/apps/8-BIT">
 				<img src="https://jinh.kr/apps/8-BIT/img/icons/8B_m.png" />
 				<p>8-BIT</p>
+				<span class="since"></span>
 			</a>
 		</div>
-		<div class="item">
+		<div class="item Morse">
 			<a href="https://play.google.com/store/apps/details?id=com.morsecode.translator.jinh&hl=ko">
 				<img src="https://jinh.kr/apps/Morse/img/icon_512.png" />
 				<p>MORSE <span>(Android)</span></p>
+				<span class="since"></span>
 			</a>
 		</div>
 	</section>
 	<hr>
 	<h2>works</h2>
 	<section>
-		<div class="item">
+		<div class="item jw">
 			<a href="http://jw.jinh.kr">
 				<img class="margin0" src="images/icon__jw_cartel.webp" style="" />
 				<p>JW TEAM CARTEL</p>
+				<span class="since">2017</span>
 			</a>
 		</div>
 	</section>
