--- a/index.html
+++ b/index.html
@@ -32,12 +32,10 @@
 	<header class="title">jinh.kr</header>
 
 	<div class="" style="position:fixed; bottom:1em; right:1em;">
-		<button type="button" name="button" onclick="card_spread(item_list, 'since_year')">#since</button>
-		<button type="button" name="button" onclick="card_spread(item_list, 'title')">#title</button>
-		<button type="button" name="button" onclick="card_spread(item_list, 'theme')">#theme</button>
+		<button type="button" name="button" onclick="card_spread(item_list, 'since_year');">#since</button>
+		<button type="button" name="button" onclick="card_spread(item_list, 'title');">#title</button>
+		<button type="button" name="button" onclick="card_spread(item_list, 'hue');">#hue</button>
 	</div>
-
-	<div class="info"></div>
 
 	<section> </section>
 
