--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
 
 	<section> </section>
 
+	<div id="splash">
+		<img src="images/icon.webp" alt="logo">
+	</div>
+
 	<!-- <footer class="title">&lt;/jinh.kr&gt;</footer> -->
 
 </body>
