--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 	<header class="title">jinh.kr</header>
 
-	<div class="" style="position:fixed; bottom:1em; right:1em;">
+	<div class="control">
 		<button type="button" name="button" onclick="card_spread(item_list, 'since_year');">#since</button>
 		<button type="button" name="button" onclick="card_spread(item_list, 'title');">#title</button>
 		<button type="button" name="button" onclick="card_spread(item_list, 'hue');">#hue</button>
