--- a/index.html
+++ b/index.html
@@ -6,14 +6,20 @@
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-39552694-1"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
 
-	  gtag('config', 'UA-39552694-1');
+		function gtag() {
+			dataLayer.push(arguments);
+		}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-39552694-1');
 	</script>
 
 	<title>jinh.kr</title>
-	<meta name="description" content="이 도메인은 이제 제껍니다 ㅎ" />
+	<meta property="og:title" content="jinh.kr" />
+	<meta property="og:description" name="description" content="이 도메인은 이제 제껍니다 ㅎ" />
+	<meta property="og:url" content="https://jinh.kr/" />
+	<meta property="og:image" content="https://jinh.kr/images/icon.webp" />
 	<meta http-equiv="content-type" content="text/html;charset=UTF-8">
 	<meta name="theme-color" content="#212121" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
