--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 	<meta property="og:description" name="description" content="이 도메인은 이제 제껍니다 ㅎ" />
 	<meta property="og:url" content="https://jinh.kr/" />
 	<meta property="og:image" content="https://jinh.kr/images/icon.webp" />
+	<meta property="og:image:width" content="128" />
+	<meta property="og:image:height" content="128" />
 	<meta http-equiv="content-type" content="text/html;charset=UTF-8">
 	<meta name="theme-color" content="#212121" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
