--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 	<link rel="apple-touch-icon" href="images/icon.webp">
 	<link rel="icon" type="image/webp" href="images/icon.webp">
 	<link href="style.css" rel="stylesheet" type="text/css" media="screen" />
+	<link href="style_theme.css" rel="stylesheet" type="text/css" media="screen" />
 	<script defer src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 	<script defer src="main.js"></script>
 </head>
