--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 	<link href="style.css" rel="stylesheet" type="text/css" media="screen" />
 	<link href="style_theme.css" rel="stylesheet" type="text/css" media="screen" />
 	<script defer src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-	<script defer src="main.js"></script>
+	<script defer src="engine/sub__lodash.js"></script>
+	<script defer src="engine/main.js"></script>
 </head>
 
 <body>
