--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 	<meta name="msapplication-TileImage" content="images/icon.webp">
 	<link rel="apple-touch-icon" href="images/icon.webp">
 	<link rel="icon" type="image/webp" href="images/icon.webp">
-	<link href="style.css" rel="stylesheet" type="text/css" media="screen" />
-	<link href="style_theme.css" rel="stylesheet" type="text/css" media="screen" />
+	<link href="engine/style.css" rel="stylesheet" type="text/css" media="screen" />
+	<link href="engine/style_theme.css" rel="stylesheet" type="text/css" media="screen" />
 	<script defer src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 	<script defer src="engine/sub__lodash.js"></script>
 	<script defer src="engine/main.js"></script>
