--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 	<header class="title">jinh.kr</header>
 
 	<div class="control">
-		<button type="button" name="button" onclick="card_spread(item_list, 'since_year');">#since</button>
-		<button type="button" name="button" onclick="card_spread(item_list, 'title');">#title</button>
-		<button type="button" name="button" onclick="card_spread(item_list, 'hue');">#hue</button>
+		<img class="sort" src="images\today-24px.svg" alt="#since" onclick="card_spread(item_list, 'since_year');">
+		<img class="sort" src="images\sort_by_alpha-24px.svg" alt="#title" onclick="card_spread(item_list, 'title');">
+		<img class="sort" src="images\gradient-24px.svg" alt="#hue" onclick="card_spread(item_list, 'hue');">
 	</div>
 
 	<section> </section>
