--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 		<img class="sort" src="images\today-24px.svg" alt="#since" onclick="card_spread(item_list, 'since_year');">
 		<img class="sort" src="images\sort_by_alpha-24px.svg" alt="#title" onclick="card_spread(item_list, 'title');">
 		<img class="sort" src="images\gradient-24px.svg" alt="#hue" onclick="card_spread(item_list, 'hue');">
+		<img class="sort" src="images\library_add-black.svg" alt="add card" onclick="card_add(1);" style="margin-left: 1em;">
 	</div>
 
 	<section> </section>
