--- a/index.html
+++ b/index.html
@@ -2,18 +2,15 @@
 <html>
 
 <head>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-39552694-1"></script>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-T6CSWXWNH0"></script>
 	<script>
-		window.dataLayer = window.dataLayer || [];
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
 
-		function gtag() {
-			dataLayer.push(arguments);
-		}
-		gtag('js', new Date());
-
-		gtag('config', 'UA-39552694-1');
-	</script>
+	gtag('config', 'G-T6CSWXWNH0');
+	</script
 
 	<title>jinh.kr</title>
 	<meta property="og:title" content="jinh.kr" />
