--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 	<!-- Google tag (gtag.js) -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-T6CSWXWNH0"></script>
 	<script>
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
 
-	gtag('config', 'G-T6CSWXWNH0');
-	</script
+		gtag('config', 'G-T6CSWXWNH0');
+	</script>
 
 	<title>jinh.kr</title>
 	<meta property="og:title" content="jinh.kr" />
