--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <body>
 
-	<header class="title">jinh.kr</header>
+	<header class="title"><a href="//www.instagram.com/jinh.kr/" target="_blank">jinh.kr</a></header>
 
 	<div class="control">
 		<img class="sort" src="images\today-24px.svg" alt="#since" onclick="card_spread(item_list, 'since_year');">
