--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
 	<header class="title"><a href="//www.instagram.com/jinh.kr/" target="_blank">jinh.kr</a></header>
 
 	<div class="control">
-		<img class="sort" src="images\today-24px.svg" alt="#since" onclick="card_spread(item_list, 'since_year');">
-		<img class="sort" src="images\sort_by_alpha-24px.svg" alt="#title" onclick="card_spread(item_list, 'title');">
-		<img class="sort" src="images\gradient-24px.svg" alt="#hue" onclick="card_spread(item_list, 'hue');">
-		<img class="sort" src="images\library_add-black.svg" alt="add card" onclick="card_add(1);" style="margin-left: 1em;">
+		<img class="sort" src="images\icon__sort_date.svg" alt="#since" onclick="card_spread(item_list, 'since_year');">
+		<img class="sort" src="images\icon__sort_alpha.svg" alt="#title" onclick="card_spread(item_list, 'title');">
+		<img class="sort" src="images\icon__sort_gradient.svg" alt="#hue" onclick="card_spread(item_list, 'hue');">
+		<img class="sort" src="images\icon__sort_add.svg" alt="add card" onclick="card_add(1);" style="margin-left: 1em;">
 	</div>
 
 	<section> </section>
 
 	<div id="splash">
-		<img src="images/icon.webp" alt="logo">
+		<img src="images/favicon.webp" alt="logo">
 	</div>
 
 	<!-- <footer class="title">&lt;/jinh.kr&gt;</footer> -->
